Authorization refactor and testing (CORE-951)
Refactors more common authorization logic out for easier reuse,
introduced Policy record indirection for representing authorization
policies.

Fixed some test isolation issues affecting the MockKeyServer highlighted
by new tests added around authorization